# check-file-dups

./: .gitignore  Cargo.toml  LICENSE.md  README.md  check-file-dups-cache.json.zst  check-file-dups.example.toml  check-file-dups.toml  inspect-cache.sh
.github/: FUNDING.yml
src/: cache.rs  cli.rs  duplicates.rs  lib.rs  main.rs  scanner.rs  utils.rs
