[package]
name = "check-file-dups"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
blake3 = "1.5"
walkdir = "2.5"
indicatif = "0.17"
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
simplelog = { version = "0.12", features = ["local-offset"] }
ctrlc = "3.4"
rayon = "1.8"
colored = "2.1"
time = { version = "0.3", features = ["formatting", "parsing", "local-offset"] }
zstd = { version = "0.13.3", features = ["zstdmt"] }
